# swc-plugin-enum-to-obj

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: enum_to_obj.rs  lib.rs
