[package]
name = "swc_plugin_enum_to_obj"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.79.*", features = ["ecma_plugin_transform", "ecma_transforms_typescript", "__parser", "__utils"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
